@startuml after2
skinparam backgroundColor #FEFEFE
skinparam packageStyle rectangle
skinparam nodesep 80
skinparam ranksep 60
skinparam linetype ortho
skinparam stereotypeCBackgroundColor #E8F5E9
skinparam class {
    BackgroundColor #F9F9F9
    BorderColor #555555
}

title **After v2 — Client-Specific Channel Selection via EnumSet**

package "Business Layer (n classes × 1 dep each)" as Biz {
    class OrderService {
        - notifier: NotificationFacade
        --
        + confirmOrder(user, orderId)
    }
    class AlertService {
        - notifier: NotificationFacade
        --
        + fireAlert(user, message)
    }
    class PasswordResetService {
        - notifier: NotificationFacade
        --
        + sendResetLink(user, token)
    }

    note right of OrderService
        <b>Channels: EMAIL, SMS</b>
        EnumSet.of(Channel.EMAIL, Channel.SMS)
    end note

    note right of AlertService
        <b>Channels: SLACK, PUSH</b>
        EnumSet.of(Channel.SLACK, Channel.PUSH)
    end note

    note right of PasswordResetService
        <b>Channels: EMAIL</b>
        EnumSet.of(Channel.EMAIL)
    end note
}

package "Facade Layer" #E8F5E9 {
    enum Channel <<Enum>> {
        EMAIL
        SMS
        SLACK
        PUSH
    }

    class NotificationFacade <<Facade>> {
        - email: EmailService
        - sms: SMSService
        - slack: SlackService
        - push: PushService
        - log: Logger
        --
        + notify(user, title, body): NotificationResult
        + notify(user, Set\\<Channel\\>, title, body): NotificationResult
    }

    class NotificationConfig <<Config>> {
        smtp + twilio + slack + firebase + log
    }

    class NotificationResult <<Result>> {
        - results: Map
        --
        + allSucceeded(): boolean
    }

    note top of NotificationFacade
        <b>Two overloads:</b>
        • notify(user, title, body)
          → delegates to EnumSet.allOf(Channel.class)
        • notify(user, channels, title, body)
          → caller picks subset

        <b>Client owns <i>which</i> channels.</b>
        <b>Facade owns <i>how</i> to send.</b>
    end note
}

package "Notification Subsystems (unchanged)" as Subs {
    class EmailService {
        + send(to, subject, body)
    }
    class SMSService {
        + send(phone, body)
    }
    class SlackService {
        + send(channel, body)
    }
    class PushNotificationService {
        + send(token, title, body)
    }
    class NotificationLogger {
        + record(userId, channel, success)
    }
}

OrderService -down-> NotificationFacade : "notify(user, {EMAIL,SMS}, ...)"
AlertService -down-> NotificationFacade : "notify(user, {SLACK,PUSH}, ...)"
PasswordResetService -down-> NotificationFacade : "notify(user, {EMAIL}, ...)"

NotificationFacade ..> Channel : "uses"
NotificationFacade ..> NotificationConfig : "wired once"
NotificationFacade ..> NotificationResult : "returns"

NotificationFacade -down-> EmailService
NotificationFacade -down-> SMSService
NotificationFacade -down-> SlackService
NotificationFacade -down-> PushNotificationService
NotificationFacade -down-> NotificationLogger

@enduml
